Fix crashes della mappa aula